# ectrans_nvidia

src/programs/: CMakeLists.txt  ectrans-benchmark.F90
src/trans/: CMakeLists.txt
src/trans/cpu/internal/: gath_spec_control_mod.F90
src/trans/gpu/: CMakeLists.txt
src/trans/gpu/internal/: gath_spec_control_mod.F90  inv_trans_ctl_mod.F90  ltinv_mod.F90  prfi1b_mod.F90  tpm_gen.F90
